--- a/VisualStudioProject/HolzToolsWPF/UserControls/ArduinoUploadWindow.xaml
+++ b/VisualStudioProject/HolzToolsWPF/UserControls/ArduinoUploadWindow.xaml
@@ -11,7 +11,7 @@
         <SolidColorBrush x:Key="AccentColor" Color="{Binding Path=ActiveWindow.AccentColor,
             RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type main:MainWindow}}}"/>
     </UserControl.Resources>
-    <Border CornerRadius="4" Background="#FF464646">
+    <Border CornerRadius="4" Background="{StaticResource ModeBackground}">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="10"/>
